syntax = "proto3";

package driversstate.v1;

import "google/protobuf/timestamp.proto";
import "proto/common/geo.proto";

option go_package = "github.com/Binit-Dhakal/Saarathi/pkg/contracts/proto/driverspb";

message OfferAccepted {
  string driver_id = 1;
  string trip_id = 2;
}

message OfferRejected {
  string driver_id = 1;
  string trip_id = 2;
}

message OfferTimedout {
  string trip_id = 1;
}
